--- a/research/04_model_evaluation_with_mlflow.ipynb
+++ b/research/04_model_evaluation_with_mlflow.ipynb
@@ -17,7 +17,7 @@
     {
      "data": {
       "text/plain": [
-       "'d:\\\\Bappy\\\\YouTube\\\\Kidney-Disease-Classification-Deep-Learning-Project\\\\research'"
+       "'/Users/tajbirhasanshuvo/academicfiles/chest-cancer-classification/research'"
       ]
      },
      "execution_count": 2,
@@ -46,7 +46,7 @@
     {
      "data": {
       "text/plain": [
-       "'d:\\\\Bappy\\\\YouTube\\\\Kidney-Disease-Classification-Deep-Learning-Project'"
+       "'/Users/tajbirhasanshuvo/academicfiles/chest-cancer-classification'"
       ]
      },
      "execution_count": 4,
@@ -64,9 +64,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "os.environ[\"MLFLOW_TRACKING_URI\"]=\"https://dagshub.com/entbappy/Chest-Disease-Classification-MLflow-DVC.mlflow\"\n",
-    "os.environ[\"MLFLOW_TRACKING_USERNAME\"]=\"entbappy\"\n",
-    "os.environ[\"MLFLOW_TRACKING_PASSWORD\"]=\"6824692c47a35333f9eac5b10041d5c8edbcef0\""
+    "os.environ[\"MLFLOW_TRACKING_URI\"]=\"https://dagshub.com/tajshuvo75/chest-cancer-classification.mlflow\"\n",
+    "os.environ[\"MLFLOW_TRACKING_USERNAME\"]=\"tajshuvo75\"\n",
+    "os.environ[\"MLFLOW_TRACKING_PASSWORD\"]=\"52d418994430c9adfa7397593b8d71a090c99994\""
    ]
   },
   {
@@ -82,7 +82,19 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2026-02-04 23:36:18.496561: I metal_plugin/src/device/metal_device.cc:1154] Metal device set to: Apple M1 Pro\n",
+      "2026-02-04 23:36:18.496584: I metal_plugin/src/device/metal_device.cc:296] systemMemory: 16.00 GB\n",
+      "2026-02-04 23:36:18.496591: I metal_plugin/src/device/metal_device.cc:313] maxCacheSize: 5.92 GB\n",
+      "2026-02-04 23:36:18.496624: I tensorflow/core/common_runtime/pluggable_device/pluggable_device_factory.cc:303] Could not identify NUMA node of platform GPU ID 0, defaulting to 0. Your kernel may not have been built with NUMA support.\n",
+      "2026-02-04 23:36:18.496638: I tensorflow/core/common_runtime/pluggable_device/pluggable_device_factory.cc:269] Created TensorFlow device (/job:localhost/replica:0/task:0/device:GPU:0 with 0 MB memory) -> physical PluggableDevice (device: 0, name: METAL, pci bus id: <undefined>)\n"
+     ]
+    }
+   ],
    "source": [
     "model = tf.keras.models.load_model(\"artifacts/training/model.h5\")"
    ]
@@ -112,8 +124,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from cnnClassifier.constants import *\n",
-    "from cnnClassifier.utils.common import read_yaml, create_directories, save_json"
+    "from chest_cancer_classification.constants import *\n",
+    "from chest_cancer_classification.utils.common import read_yaml, create_directories"
    ]
   },
   {
@@ -127,6 +139,7 @@
     "        self, \n",
     "        config_filepath = CONFIG_FILE_PATH,\n",
     "        params_filepath = PARAMS_FILE_PATH):\n",
+    "        \n",
     "        self.config = read_yaml(config_filepath)\n",
     "        self.params = read_yaml(params_filepath)\n",
     "        create_directories([self.config.artifacts_root])\n",
@@ -136,7 +149,7 @@
     "        eval_config = EvaluationConfig(\n",
     "            path_of_model=\"artifacts/training/model.h5\",\n",
     "            training_data=\"artifacts/data_ingestion/Chest-CT-Scan-data\",\n",
-    "            mlflow_uri=\"https://dagshub.com/entbappy/chest-Disease-Classification-MLflow-DVC.mlflow\",\n",
+    "            mlflow_uri=\"https://dagshub.com/tajshuvo75/chest-cancer-classification.mlflow\",\n",
     "            all_params=self.params,\n",
     "            params_image_size=self.params.IMAGE_SIZE,\n",
     "            params_batch_size=self.params.BATCH_SIZE\n",
@@ -155,13 +168,24 @@
     "import tensorflow as tf\n",
     "from pathlib import Path\n",
     "import mlflow\n",
-    "import mlflow.keras\n",
-    "from urllib.parse import urlparse"
+    "import mlflow.tensorflow\n",
+    "from urllib.parse import urlparse\n",
+    "from chest_cancer_classification.utils.common import save_json\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import tensorflow.keras as keras\n",
+    "keras.__version__ = \"2.13.0\"\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,7 +227,7 @@
     "    def evaluation(self):\n",
     "        self.model = self.load_model(self.config.path_of_model)\n",
     "        self._valid_generator()\n",
-    "        self.score = model.evaluate(self.valid_generator)\n",
+    "        self.score = self.model.evaluate(self.valid_generator)\n",
     "        self.save_score()\n",
     "\n",
     "    def save_score(self):\n",
@@ -212,68 +236,72 @@
     "\n",
     "    \n",
     "    def log_into_mlflow(self):\n",
-    "        mlflow.set_registry_uri(self.config.mlflow_uri)\n",
-    "        tracking_url_type_store = urlparse(mlflow.get_tracking_uri()).scheme\n",
-    "        \n",
+    "        mlflow.set_tracking_uri(self.config.mlflow_uri)\n",
+    "\n",
     "        with mlflow.start_run():\n",
     "            mlflow.log_params(self.config.all_params)\n",
     "            mlflow.log_metrics(\n",
     "                {\"loss\": self.score[0], \"accuracy\": self.score[1]}\n",
     "            )\n",
-    "            # Model registry does not work with file store\n",
-    "            if tracking_url_type_store != \"file\":\n",
     "\n",
-    "                # Register the model\n",
-    "                # There are other ways to use the Model Registry, which depends on the use case,\n",
-    "                # please refer to the doc for more information:\n",
-    "                # https://mlflow.org/docs/latest/model-registry.html#api-workflow\n",
-    "                mlflow.keras.log_model(self.model, \"model\", registered_model_name=\"VGG16Model\")\n",
-    "            else:\n",
-    "                mlflow.keras.log_model(self.model, \"model\")\n"
+    "            mlflow.tensorflow.log_model(\n",
+    "                self.model,\n",
+    "                artifact_path=\"model\"\n",
+    "            )\n",
+    "\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2023-10-02 15:10:13,653: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
-      "[2023-10-02 15:10:13,655: INFO: common: yaml file: params.yaml loaded successfully]\n",
-      "[2023-10-02 15:10:13,656: INFO: common: created directory at: artifacts]\n",
-      "Found 139 images belonging to 2 classes.\n",
-      "9/9 [==============================] - 12s 1s/step - loss: 1.9542 - accuracy: 0.6115\n",
-      "[2023-10-02 15:10:26,038: INFO: common: json file saved at: scores.json]\n"
+      "[2026-02-04 23:36:19,914: INFO: common: yaml file: config/config.yaml loaded successfully]\n",
+      "[2026-02-04 23:36:19,915: INFO: common: yaml file: params.yaml loaded successfully]\n",
+      "[2026-02-04 23:36:19,916: INFO: common: created directory at: artifacts]\n",
+      "Found 102 images belonging to 2 classes.\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023/10/02 15:10:28 WARNING mlflow.tensorflow: You are saving a TensorFlow Core model or Keras model without a signature. Inference with mlflow.pyfunc.spark_udf() will not work unless the model's pyfunc representation accepts pandas DataFrames as inference inputs.\n"
+      "2026-02-04 23:36:20.540861: I tensorflow/core/grappler/optimizers/custom_graph_optimizer_registry.cc:114] Plugin optimizer for device_type GPU is enabled.\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2023-10-02 15:10:29,308: WARNING: save: Found untraced functions such as _jit_compiled_convolution_op, _jit_compiled_convolution_op, _jit_compiled_convolution_op, _jit_compiled_convolution_op, _jit_compiled_convolution_op while saving (showing 5 of 14). These functions will not be directly callable after loading.]\n",
-      "INFO:tensorflow:Assets written to: C:\\Users\\bokti\\AppData\\Local\\Temp\\tmpny8egng1\\model\\data\\model\\assets\n",
-      "[2023-10-02 15:10:29,857: INFO: builder_impl: Assets written to: C:\\Users\\bokti\\AppData\\Local\\Temp\\tmpny8egng1\\model\\data\\model\\assets]\n"
+      "7/7 [==============================] - 2s 123ms/step - loss: 0.0539 - accuracy: 0.9902\n",
+      "[2026-02-04 23:36:22,045: INFO: common: json file saved at: scores.json]\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "d:\\Softwares\\anaconda3\\envs\\kidney\\lib\\site-packages\\_distutils_hack\\__init__.py:33: UserWarning: Setuptools is replacing distutils.\n",
-      "  warnings.warn(\"Setuptools is replacing distutils.\")\n",
-      "Registered model 'VGG16Model' already exists. Creating a new version of this model...\n",
-      "2023/10/02 15:12:07 INFO mlflow.tracking._model_registry.client: Waiting up to 300 seconds for model version to finish creation.                     Model name: VGG16Model, version 4\n",
-      "Created version '4' of model 'VGG16Model'.\n"
+      "2026/02/04 23:36:24 WARNING mlflow.tensorflow: You are saving a TensorFlow Core model or Keras model without a signature. Inference with mlflow.pyfunc.spark_udf() will not work unless the model's pyfunc representation accepts pandas DataFrames as inference inputs.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:Assets written to: /var/folders/sr/v_bsvj7j3lgg41xztlkdg5zh0000gn/T/tmpojo6xp37/model/data/model/assets\n",
+      "[2026-02-04 23:36:24,969: INFO: builder_impl: Assets written to: /var/folders/sr/v_bsvj7j3lgg41xztlkdg5zh0000gn/T/tmpojo6xp37/model/data/model/assets]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2026/02/04 23:36:29 WARNING mlflow.utils.environment: Encountered an unexpected error while inferring pip requirements (model URI: /var/folders/sr/v_bsvj7j3lgg41xztlkdg5zh0000gn/T/tmpojo6xp37/model, flavor: tensorflow), fall back to return ['tensorflow==2.13.0']. Set logging level to DEBUG to see the full traceback.\n"
      ]
     }
    ],
@@ -288,18 +316,11 @@
     "except Exception as e:\n",
     "   raise e"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "kidney",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -313,7 +334,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.18"
+   "version": "3.9.18"
   },
   "orig_nbformat": 4
  },
